Bug 114407 - Empty help text tooltip while hovering the form (gtk)
Summary: Empty help text tooltip while hovering the form (gtk)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: GTK2
  Show dependency treegraph
 
Reported: 2017-12-11 14:13 UTC by Xisco Faulí
Modified: 2017-12-26 20:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (8.69 KB, application/vnd.oasis.opendocument.text)
2017-12-11 14:14 UTC, Xisco Faulí
Details
screenshot (55.09 KB, image/png)
2017-12-11 14:15 UTC, Xisco Faulí
Details
screenshot (1.76 KB, image/png)
2017-12-12 12:53 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-12-11 14:13:59 UTC
Steps to reproduce:
1. Open attached document
2. Put the mouse on the form

Observed behaviour: The tooltip is empty

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 3af500580b1c82eabd60335c9ebc458a3f68850c
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

and back to 

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 1 Xisco Faulí 2017-12-11 14:14:23 UTC
Created attachment 138366 [details]
sample
Comment 2 Xisco Faulí 2017-12-11 14:15:07 UTC
Created attachment 138367 [details]
screenshot
Comment 3 raal 2017-12-11 19:18:16 UTC
I can confirm Version: 6.1.0.0.alpha0+
Build ID: aa28b54ab568fb7160095bb4a2fec338b1398b43
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2;
Comment 4 Yousuf Philips (jay) (retired) 2017-12-12 12:53:02 UTC
Created attachment 138396 [details]
screenshot

The tooltip wasnt empty in 138367, but as the text was colored in white and the background is in yellow, it just seems like it.

The tooltip text appears in black for me, so i would guess that this is likely a theming issue. I checked gtk3 backend and only when in design edit mode will the tooltip appear, so not sure if that is a bug or not.

Version: 6.1.0.0.alpha0+
Build ID: 2618e4a13d719122e6358d9d96864d1691e56a02
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 5 Caolán McNamara 2017-12-12 14:06:51 UTC
I think in this case the tooltip color is taken from the theme, but for this specific tooltip, because its a child of the form widget and because the form widgets are set to be *not* themed that the tooltip itself inherits the don't-theme setting so its painted with non-themed yellow and then text printed with themed white on top
Comment 6 Commit Notification 2017-12-12 20:18:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=de0c542cd221ca2b189323fa7ce84b6cf55d2fd2

tdf#114407 let tooltip children of non-nwf widgets be nwf themed

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2017-12-26 20:51:07 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 2bf1cc7372088ec31ac5f0fb60de57feda59d3b7
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded