tdf#114407 let tooltip children of non-nwf widgets be nwf themed

alternative is to not use themed text color when writing text
in non-nwf tooltips

Change-Id: I12556d5fd9a38c4b36f77c97144898f08fa4d738