vcl/source/window/window.cxx
@@ -2248,7 +2248,8 @@ void Window::Show(bool bVisible, ShowFlags nFlags)
         // required here, because frames never show up in the child hierarchy - which should be fixed....
         // eg, the drop down of a combobox which is a system floating window
         if( mpWindowImpl->mbFrame && GetParent() && GetParent()->IsCompoundControl() &&
-            GetParent()->IsNativeWidgetEnabled() != IsNativeWidgetEnabled() )
+            GetParent()->IsNativeWidgetEnabled() != IsNativeWidgetEnabled() &&
+            !(GetStyle() & WB_TOOLTIPWIN) )
         {
             EnableNativeWidget( GetParent()->IsNativeWidgetEnabled() );
         }
